...
            horizontalAlignment = Alignment.CenterHorizontally,
            modifier = Modifier.align(Alignment.Center)) {
              Text("Add Photo", color = Color.Black)
              Image(
                  painter = rememberAsyncImagePainter(imageUri ?: imageUrl),
                  contentDescription = "Selected Image",
                  modifier = Modifier.size(120.dp).testTag("selectedImagePreview"))
            }
      }
}

/**
 * Displays a text field for entering a journey description.
...
fun JourneyDescriptionField(description: String, onDescriptionChange: (String) -> Unit) {
  OutlinedTextField(
      value = description,
      onValueChange = onDescriptionChange,
      label = { Text("Description") },
      placeholder = { Text("Capture your coffee experience") },
      modifier = Modifier.fillMaxWidth().height(150.dp).testTag("inputJourneyDescription"))
}

/**
 * Displays a row with a checkbox for selecting "At home" or "At a coffee shop".
 *
 * @param isYesSelected Whether the coffee shop option is selected.
...
 * @param onCheckChange Callback when the checkbox state changes.
 */
@Composable
fun CoffeeShopCheckboxRow(isYesSelected: Boolean, onCheckChange: () -> Unit) {
  Row(
      verticalAlignment = Alignment.CenterVertically,
      modifier = Modifier.testTag("coffeeShopCheckRow").clickable { onCheckChange() }) {
        Icon(
            imageVector = if (isYesSelected) Icons.Outlined.Check else Icons.Outlined.Home,
            contentDescription = if (isYesSelected) "Checked" else "Unchecked",
            tint = Color.Black,
            modifier = Modifier.testTag("coffeeShopCheckboxIcon"))
        Spacer(modifier = Modifier.width(8.dp))
        Text(
            text = if (isYesSelected) "At a coffee shop" else "At home",
            color = Color.Black,
            modifier = Modifier.testTag("coffeeShopCheckText"))
      }
}

/**
 * Displays a dropdown menu for selecting a coffee shop location.
 *
...
            keyboardActions =
                KeyboardActions(
                    onDone = {
                      selectCoffeeShop()
                      showDropdown = false
                    }),
            modifier = Modifier.menuAnchor().fillMaxWidth().testTag("inputCoffeeshopLocation"))

        // Dropdown menu for coffee shop suggestions
        ExposedDropdownMenu(
            expanded = showDropdown && coffeeShops.isNotEmpty(),
            onDismissRequest = { showDropdown = false },
            modifier = Modifier.testTag("locationSuggestionsDropdown")) {
              coffeeShops.take(3).forEach { coffeeShop ->
                DropdownMenuItem(
                    text = {
                      Text(
                          text =
                              coffeeShop.coffeeShopName.take(30) +
...
            readOnly = true, // Prevent typing in the TextField
            trailingIcon = { ExposedDropdownMenuDefaults.TrailingIcon(expanded = expanded) },
            modifier =
                Modifier.menuAnchor()
                    .fillMaxWidth() // Set the width of the text field to fill the
                    // parent width
                    .testTag("inputCoffeeOrigin") // Add a test tag for testing
                    .focusRequester(focusRequester) // Attach the FocusRequester
                    .clickable {
                      expanded = true // Trigger dropdown when clicked
                    },
            keyboardOptions = KeyboardOptions.Default.copy(imeAction = ImeAction.Done),
            keyboardActions = KeyboardActions(onDone = { focusRequester.requestFocus() }))
...
        DropdownMenu(
            expanded = coffeeOriginExpand,
            onDismissRequest = { coffeeOriginExpand = false },
            modifier =
                Modifier.height(200.dp) // Limit height of the dropdown (set a fixed value)
                    .focusRequester(focusRequester) // Attach the FocusRequester
                    .testTag("dropdownMenuCoffeeOrigin") // Add a test tag for testing
            ) {
              CoffeeOrigin.entries.drop(1).forEach { origin ->
                DropdownMenuItem(
                    text = { Text(origin.name) },
                    onClick = {
                      onCoffeeOriginChange(origin) // Set the selected coffee origin
                      expanded = false // Close the dropdown
                    },
                    modifier = Modifier.padding(8.dp).testTag("YourJourneyTitle"))
              }
            }
      }
}

/**
...
              }) {
                Text("OK", fontWeight = FontWeight.Bold)
              }
        },
        dismissButton = {
          TextButton(onClick = { showDatePicker = false }) {
            Text("Cancel", fontWeight = FontWeight.Bold)
          }
        },
        modifier = Modifier.testTag("datePickerDialog")) {
          DatePicker(state = datePickerState)
        }
  }

  Column(modifier = Modifier.fillMaxWidth(), verticalArrangement = Arrangement.spacedBy(2.dp)) {
    Text(
        text = "Date",
        fontSize = 16.sp,
        fontWeight = FontWeight.Bold,
        modifier = Modifier.testTag("dateTitle"))
    // UI element to open the DatePickerDialog
    TextButton(onClick = { showDatePicker = true }, modifier = Modifier.testTag("dateButton")) {
      Text(text = selectedDate.let { dateFormat.format(it.toDate()) }, fontSize = 14.sp)
    }
  }
}

